--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -12,13 +12,34 @@
     flex-direction: column;
     align-items: flex-start;
     padding: 0;
+    overflow-x: hidden;
     li {
+        position: relative;
         display: inline-flex;
         align-items: center;
         list-style: none;
         padding: 2px 0px;
         margin: 0;
         cursor: pointer;
+        width: 100%;
+        height: 28px;
+        box-sizing: border-box;
+        transition: all .5s;
+
+        &::after {
+            content: 'Remover';
+            text-align: left;
+            color: #FFFFFF;
+            display: flex;
+            align-items: center;
+            width: 100%;
+            position: absolute;
+            background-color: red;
+            height: 28px;
+            z-index: -2;
+            right: calc(-100% - 5px);
+            padding-left: 5px;
+        }
         @media screen and (min-width: 480px) {
             &:hover {
                 .checkbox:not(.nt) {
@@ -60,6 +81,12 @@
             margin: 0;
             padding: 0;
             text-align: left;
+            user-select: none;
+            -webkit-user-drag: none;
+            transform: translateX(0px) !important;
+            &::first-letter {
+                text-transform: uppercase;
+            }
         }
     }
 }
@@ -118,6 +145,7 @@
 }
 
 .new-task-input {
+    width: 100%;
     padding: 0;
     margin: 0;
     font-size: 1rem;
@@ -127,6 +155,8 @@
     line-height: 1.5;
     box-sizing: border-box;
     border-bottom: 1px solid transparent;
+    border-radius: 0;
+    outline: none;
     &:focus {
         outline: none;
         border-bottom: 1px solid #333;
@@ -136,4 +166,5 @@
 
 li.new-task-display {
     display: none;
+    width: 100%;
 }
