--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -7,12 +7,20 @@
     margin-bottom: 10px;
 }
 
+.titleSection.active ~ .tasksList {
+    max-height: 0;
+    transition: max-height .3s;
+    overflow: hidden;
+}
+
 .tasksList {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding: 0;
     overflow-x: hidden;
+    max-height: 500px;
+    transition: max-height .5s ease-in;
     li {
         position: relative;
         display: inline-flex;
@@ -86,6 +94,8 @@
             transform: translateX(0px) !important;
             &::first-letter {
                 text-transform: uppercase;
+                user-select: none;
+                -webkit-user-drag: none;
             }
         }
     }
