--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,7 @@ h1 {
   position: relative;
   text-align: left;
   cursor: pointer;
+  transition: .3s;
 
   &::before {
     content: '';
@@ -101,6 +102,7 @@ h1 {
 
 .titleSection.active {
     font-weight: bold;
+    transition: .3s ease-in-out;
     &::before {
       background-image: url('data:image/svg+xml;svg,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-down"><path d="m6 9 6 6 6-6"/></svg>');
     }
