--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -58,33 +58,32 @@
     overflow-x: hidden;
     max-height: 500px;
     transition: max-height .5s ease-in;
+    transform: translate(0) !important;
+
+    .task {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        position: relative;
+        z-index: 1;
+        transition: all .5s;
+        margin-bottom: 3px;
+    }
+
     li {
         position: relative;
         display: inline-flex;
         align-items: center;
         list-style: none;
-        padding: 2px 0px;
+        padding: 5px 0px;
         margin: 0;
         cursor: pointer;
         width: 100%;
-        height: 28px;
+        
         box-sizing: border-box;
         transition: all .5s;
+        transform: translate(0) !important;
 
-        &::after {
-            content: 'Remover';
-            text-align: left;
-            color: #FFFFFF;
-            display: flex;
-            align-items: center;
-            width: 100%;
-            position: absolute;
-            background-color: #ee2737;
-            height: 28px;
-            z-index: -2;
-            right: calc(-100% - 5px);
-            padding-left: 5px;
-        }
         @media screen and (min-width: 480px) {
             &:hover {
                 .checkbox:not(.nt) {
@@ -102,6 +101,8 @@
         }
         .checkbox {
             margin-right: 10px;
+            transform: translate(0) !important;
+
             i {
                 width: 20px;
                 height: 20px;
@@ -136,6 +137,30 @@
             }
         }
     }
+
+    .remove {
+        cursor: pointer;
+        position: absolute;     
+        text-align: left;
+        color: #FFFFFF;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        right: -100px;
+        background-color: #ee2737;
+        width: 100px;
+        height: 100%;
+        padding: 0 10px;
+        box-sizing: border-box;
+        font-size: 0.85rem;
+        font-weight: 300;
+        transition: all .5s;
+
+        &.active {
+            right: 0;
+        }
+    }
+
 }
 
 .new-taskButton {
