--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -24,6 +24,18 @@
         background-position: center;
         background-size: 16px;
     }
+
+    small {
+        line-height: 1;
+        font-size: 0.75rem;
+        display: flex;
+        align-items: flex-end;
+        padding-bottom: 3px;
+        font-weight: 700;
+        right: 20px;
+        position: absolute;
+        bottom: 3px;
+    }
 }
 
 .titleSection.general {
@@ -239,4 +251,82 @@
 li.new-task-display {
     display: none;
     width: 100%;
+}
+
+.points {
+    margin-bottom: 15px;
+
+    p {
+        margin: 0;
+        font-weight: 700;
+        text-transform: uppercase;
+        font-size: 0.75rem;
+    }
+    i {
+        position: absolute;
+        display: block;
+        width: 16px;
+        height: 16px;
+        left: 5px;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 100%;
+        background-image: url('data:image/svg+xml;svg,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="rgb(0 255 234)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-flame"><path d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"/></svg>');
+        mix-blend-mode: difference;
+        z-index: 1;
+    }
+    
+    span {
+        font-size: 0.75rem;
+        font-weight: 700;
+        letter-spacing: 1px;
+        color: #00ffea;
+        mix-blend-mode: difference;
+        margin: 0 auto;
+        left: 0;
+        right: 0;
+        padding: 0;
+        position: absolute;
+        z-index: 1;
+        
+    }
+    .progress {
+        width: 100%;
+        height: 20px;
+        border-radius: 20px;
+        border: 1px solid #333;
+        box-sizing: border-box;
+        display: flex;
+        position: relative;
+        overflow: hidden;
+        .progress-bar {
+            height: 100%;
+            box-sizing: border-box;
+            border-radius: 20px;
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
+            background-color: #ee2737;
+            transform: translateX(0px) !important;
+            transition: all .5s;
+        }
+        
+        .complete {
+            background: linear-gradient(-90deg, #ee2737, #b52b37, #b52b37, #b52b37, #ee2737);
+            background-color: #ee2737;
+            background-size: 600% 600%;
+            animation: gradient 5s ease infinite;
+        }
+    }
+}
+
+@keyframes gradient {
+	0% {
+        background-position: 100% 150%;
+	}
+    50% {
+        background-position: 100% 50%;
+    }
+	100% {
+        background-position: 0% 0%;
+	}
 }
