--- a/src/components/navBar/style.css
+++ b/src/components/navBar/style.css
@@ -168,9 +168,10 @@ nav {
     }
 
     .helpContainer {
-      background-color: var(--background-color-dark);
-      box-shadow: 0px 10px 10px -10px rgba(255, 255, 255, 0.2);
+      background-color: var(--background-color);
+      box-shadow: 0px 10px 10px -10px var(--border-color);
       border: 1px solid var(--text-color-dark);
+      color: var(--text-color);
     
       h2 {
         i {
