Corrigindo bugs de interface e alterando estilo da interface

--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,15 @@
   padding: 0;
   text-align: center;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+.mainContainer {
+  position: relative;
+}
+
+.scroll {
+  overflow: hidden;
+}
